--- a/MassAutoGarage/Views/HRMS_PaySlip/Index.cshtml
+++ b/MassAutoGarage/Views/HRMS_PaySlip/Index.cshtml
@@ -62,53 +62,45 @@
 
                                     <div id="content" @*id="printdiv"*@>
 
+                                        <h4 style="text-align:center;"><b>Pay Slip</b></h4>
                                         <table border="1" id="example" class="display table table-bordered" style="width: 100%; font-family: Verdana; border-width: thin; border-collapse: collapse; " cellpadding="4" cellspacing="1">
                                             <thead>
-                                                @*<tr>
-                                                        <th scope="col" style="font-size: 13px; white-space: nowrap">
-                                                            Employee Name
-                                                        </th>
-                                                        <th scope="col" style="font-size: 13px; white-space: nowrap">Number of working Hours</th>
-                                                        <th scope="col" style="font-size: 13px; white-space: nowrap">Standard Total Time work </th>
-                                                        <th scope="col" style="font-size: 13px; white-space: nowrap">Over Time (Minutes)</th>
-                                                        <th scope="col" style="font-size: 13px; white-space: nowrap">Over Time Rate</th>
-                                                        <th scope="col" style="font-size: 13px; white-space: nowrap">Basic Salary</th>
-                                                        <th scope="col" style="font-size: 13px; white-space: nowrap">Salary</th>
-                                                        <th scope="col" style="font-size: 13px; white-space: nowrap">Over Time Salary</th>
-                                                        <th scope="col" style="font-size: 13px; white-space: nowrap">Total Salary </th>
-
-                                                    </tr>*@
-                                                <tr>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Employee Name</th>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Number of working Hours</th>
+                                                <tr style="border:1px solid">
+                                                    <td style="padding:5px;"><b>Date of Joining : </b> 15/11/2024</td>
+                                                    <td style="padding:5px;"><b>Employee Name : </b> Kumar Sharma</td>
                                                 </tr>
-                                                <tr>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Standard Total Time work </th>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Over Time (Minutes)</th>
+                                                <tr style="border:1px solid">
+                                                    <th style="padding:5px;"><b>Pay Period : </b> </th>
+                                                    <th style="padding:5px;"><b>Designation : </b></th>
                                                 </tr>
-                                                <tr>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Over Time Rate</th>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Basic Salary</th>
+                                                <tr style="border:1px solid">
+                                                    <th style="padding:5px;"><b>Working Days : </b></th>
+                                                    <th style="padding:5px;"><b>Department : </b></th>
                                                 </tr>
-                                                <tr>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Salary</th>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Over Time Salary</th>
+                                                <tr style="border:1px solid">
+                                                    <th style="padding:5px;"><b>Basic Salary : </b></th>
+                                                    <th style="padding:5px;"><b>Allowance : </b></th>
                                                 </tr>
-                                                <tr>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Employee Name</th>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Number of working Hours</th>
+                                                <tr style="border:1px solid">
+                                                    <th style="padding:5px;"><b>No of Leave : </b></th>
+                                                    <th style="padding:5px;"><b>Over time / Over time Amount : </b></th>
                                                 </tr>
-                                                <tr>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Standard Total Time work </th>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Over Time (Minutes)</th>
+                                                <tr style="border:1px solid">
+                                                    <th style="padding:5px;"><b>Bonus : </b></th>
+                                                    <th style="padding:5px;"><b>Loan Decution : </b></th>
                                                 </tr>
-                                                <tr>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Over Time Rate</th>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Basic Salary</th>
+                                                <tr style="border:1px solid">
+                                                    <th style="padding:5px;"><b>Additional Decution : </b> </th>
+                                                    <th style="padding:5px;"><b>Total Salary : </b></th>
                                                 </tr>
-                                                <tr>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Salary</th>
-                                                    <th scope="col" style="font-size: 13px; white-space: nowrap">Over Time Salary</th>
+                                                <tr style="border:1px solid">
+                                                    <th colspan="2" style="padding:20px;text-align:start">
+                                                        <b>Employee Signature</b>
+                                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                        <b>HR Manager Signature</b>
+                                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                        <b>Accountant Signature</b>
+                                                    </th>
                                                 </tr>
                                             </thead>
                                             @*<tbody>
