--- a/MassAutoGarage/Views/HR_GeneralRequest/GeneralRequest.cshtml
+++ b/MassAutoGarage/Views/HR_GeneralRequest/GeneralRequest.cshtml
@@ -267,14 +267,14 @@
                                    
                                     <div class="col-xxl-3 col-md-3">
                                       <label for="labelInput" class="form-label"> Voucher Number <code>*</code></label> 
-                                        <input type="text" class="form-control" id="EmployeeId" />
+                                        <input type="text" class="form-control" id="EmployeeId" readonly/>
                                     </div>
                               
                                 </div>
                                 <hr />
                                 <div class="row gy-4" style="margin-bottom:15px;">
                                     <div class="col-xxl-3 col-md-4">
-                                        <label for="labelInput" class="form-label"> Name <code>*</code></label>
+                                        <label for="labelInput" class="form-label">Employee Name <code>*</code></label>
                                         <select class="form-control">
                                             <option>--Select Employee--</option>
                                             <option>Sudhakar Sharma</option>
@@ -311,7 +311,7 @@
                                     </div>
                                     <div class="col-xxl-3 col-md-4">
                                         <label for="labelInput" class="form-label">EmpId<code>*</code></label>
-                                        <input type="text" class="form-control" id="EmployeeId" />
+                                        <input type="text" class="form-control" id="EmployeeId" readonly/>
                                     </div>
                                 </div>
                             </fieldset>
