--- a/MassAutoGarage/Views/Shared/_sidebar.cshtml
+++ b/MassAutoGarage/Views/Shared/_sidebar.cshtml
@@ -753,11 +753,75 @@
                     <div class="collapse menu-dropdown" id="sidebarForm">
                         <ul class="nav nav-sm flex-column">
                             <li class="nav-item">
-                                <a href="@Url.Action("GeneralRequest", "HR_GeneralRequest")" class="nav-link" data-key="t-horizontal">General Request</a>
+                                <a href="@Url.Action("GeneralRequestList", "HR_GeneralRequest")" class="nav-link" data-key="t-horizontal">General Request List</a>
                             </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("LeaveRequestList", "HR_LeaveRequest")" class="nav-link" data-key="t-horizontal">Leave Request List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("NewStaffJoiningList", "HR_NewStaffJoining")" class="nav-link" data-key="t-horizontal">New Staff Joining List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("PassportReleaseList", "HR_PassportRelease")" class="nav-link" data-key="t-horizontal">Passport Release List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("ResumingDutyList", "HR_ResumingDuty")" class="nav-link" data-key="t-horizontal">Resuming Duty List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("StaffTransferReportList", "HR_StaffTransferReport")" class="nav-link" data-key="t-horizontal">Staff Transfer Report List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("ReimbursementList", "HR_Reimbursement")" class="nav-link" data-key="t-horizontal">Reimbursement List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("WorkHandOverReportList", "HR_WorkHandOverReport")" class="nav-link" data-key="t-horizontal">Work Hand Over Report List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("FinalClearanceReportList", "HR_FinalClearanceReport")" class="nav-link" data-key="t-horizontal">Final Clearance Report List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("LeaveClearanceList", "HR_LeaveClearance")" class="nav-link" data-key="t-horizontal">Leave Clearance List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("RecruitmentRequisitionList", "HR_RecruitmentRequisition")" class="nav-link" data-key="t-horizontal">Recruitment Requisition List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("MainPowerRequisitionList", "HR_MainPowerRequisition")" class="nav-link" data-key="t-horizontal">Main Power Requisition List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("RenualAndNonRenwalList", "HR_RenualAndNonRenwal")" class="nav-link" data-key="t-horizontal">Renual And Non Renwal List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="@Url.Action("TourIntimationList", "HR_TourIntimation")" class="nav-link" data-key="t-horizontal">Tour Intimation List</a>
+                            </li>
+
+
+
+
                         </ul>
                     </div>
                 </li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
