--- a/MassAutoGarage/Views/HR_GeneralRequest/GeneralRequest.cshtml
+++ b/MassAutoGarage/Views/HR_GeneralRequest/GeneralRequest.cshtml
@@ -1,4 +1,4 @@
-﻿@model MassAutoGarage.Models.HRMS_EmployeeDocuments.HRMSEmployeeDocumentsModel
+﻿@model MassAutoGarage.Models.HR_GeneralRequest.HR_GeneralRequestModel
 
 @{
     ViewBag.Title = "General Request";
@@ -264,54 +264,40 @@
                                 <legend style="background-color:#151529">( Please Fill In The Information Inside The Box And Line Provided )</legend>
 
                                 <div class="row gy-4" style="margin-bottom:15px;">
-                                   
                                     <div class="col-xxl-3 col-md-3">
-                                      <label for="labelInput" class="form-label"> Voucher Number <code>*</code></label> 
-                                        <input type="text" class="form-control" id="EmployeeId" readonly/>
+                                        <label for="labelInput" class="form-label"> Voucher Number <code>*</code></label>
+                                        @Html.TextBoxFor(m => m.VoucherNumber, new { @class = "form-control", tabindex = 1 })
                                     </div>
-                              
                                 </div>
                                 <hr />
                                 <div class="row gy-4" style="margin-bottom:15px;">
                                     <div class="col-xxl-3 col-md-4">
                                         <label for="labelInput" class="form-label">Employee Name <code>*</code></label>
-                                        <select class="form-control">
-                                            <option>--Select Employee--</option>
-                                            <option>Sudhakar Sharma</option>
-                                            <option>Jitu Kumar</option>
-                                        </select>
+                                        @*@Html.DropDownListFor(x => x.EmployeeId, new SelectList(ViewBag.ddlEmployee, "Id", "EmployeeName"), "- Select Employee -", new { @class = "js-example-basic-single", tabindex = 2 })*@
+
+                                        @Html.DropDownListFor(x => x.EmployeeId, new SelectList(ViewBag.ddlEmployee, "Id", "EmployeeName"), "- Select Employee -", new { @class = "form-control", tabindex = 2 })
+
+
                                     </div>
                                     <div class="col-xxl-3 col-md-4">
                                         <label for="labelInput" class="form-label">Date<code>*</code></label>
-                                        <input type="text" class="form-control" id="EmployeeId" />
+                                        @Html.TextBoxFor(m => m.Date, new { @class = "form-control", tabindex = 3 })
                                     </div>
                                     <div class="col-xxl-3 col-md-4">
                                         <label for="labelInput" class="form-label">Designation<code>*</code></label>
-                                        <select class="form-control">
-                                            <option>--Select Designation--</option>
-                                            <option>Software Engineer</option>
-                                            <option>Singer</option>
-                                        </select>
+                                        @Html.DropDownListFor(x => x.DesignationId, new SelectList(ViewBag.ddlDesignation, "Id", "Designation"), "- Select Designation -", new { @class = "form-control", tabindex = 4 })
                                     </div>
                                     <div class="col-xxl-3 col-md-4">
                                         <label for="labelInput" class="form-label">Branch<code>*</code></label>
-                                        <select class="form-control">
-                                            <option>--Select Branch--</option>
-                                            <option>Tamkuhi Raj</option>
-                                            <option>Kushinahar</option>
-                                        </select>
+                                        @Html.DropDownListFor(x => x.BranchId, new SelectList(ViewBag.ddlBranch, "Id", "BranchName"), "- Select Branch -", new { @class = "form-control", tabindex = 5 })
                                     </div>
                                     <div class="col-xxl-3 col-md-4">
                                         <label for="labelInput" class="form-label">Department<code>*</code></label>
-                                        <select class="form-control">
-                                            <option>--Select Department--</option>
-                                            <option>Software</option>
-                                            <option>Civil</option>
-                                        </select>
+                                        @Html.DropDownListFor(x => x.DepartmentId, new SelectList(ViewBag.ddlDepartment, "Id", "DepartmentName"), "- Select Department -", new { @class = "form-control", tabindex = 6 })
                                     </div>
                                     <div class="col-xxl-3 col-md-4">
                                         <label for="labelInput" class="form-label">EmpId<code>*</code></label>
-                                        <input type="text" class="form-control" id="EmployeeId" readonly/>
+                                        @Html.TextBoxFor(m => m.EmpId, new { @class = "form-control", @readonly = "readonly", tabindex = 7 })
                                     </div>
                                 </div>
                             </fieldset>
@@ -325,18 +311,32 @@
                                     <legend style="background-color:#151529;" id="legendCertificate">1) Certificate</legend>
 
                                     <div class="row gy-4" style="margin-bottom: 15px; padding-left: 10px; padding-right: 10px;">
+
+                                        @*@foreach (var item in Model.lst)
+                                        {
+                                            <div class="col-xxl-3 col-md-3" id="examplediv">
+                                                <label class="form-control"><input type="checkbox" id="Certificate" value="@item.Certificate" />@item.Certificate</label>
+                                                <span id="hdfId" value="@item.Id">@item.Id</span>
+                                            </div>
+                                            i++;
+                                        }*@
+
                                         <div class="col-xxl-3 col-md-3">
-                                            <label class="form-control"><input type="checkbox" />Salary Certificate</label>
-                                        </div>
-                                        <div class="col-xxl-3 col-md-3">
-                                            <label class="form-control"><input type="checkbox" />Salary Transfer Letter</label>
-                                        </div>
-                                        <div class="col-xxl-3 col-md-3">
-                                            <label class="form-control"><input type="checkbox" />NOC</label>
-                                        </div>
-                                        <div class="col-xxl-3 col-md-3">
-                                            <label class="form-control"><input type="checkbox" />Experience Certificate</label>
-                                        </div>
+                                                <label class="form-control"><input type="checkbox" name="SalaryCertificate" />Salary Certificate</label>
+                                            </div>
+                                            <div class="col-xxl-3 col-md-3">
+                                                <label class="form-control"><input type="checkbox" />Salary Transfer Letter</label>
+                                            </div>
+                                            <div class="col-xxl-3 col-md-3">
+                                                <label class="form-control"><input type="checkbox" />NOC</label>
+                                            </div>
+                                            <div class="col-xxl-3 col-md-3">
+                                                <label class="form-control"><input type="checkbox" />Experience Certificate</label>
+                                            </div>
+
+
+
+
                                         <div class="col-xxl-6 col-md-6" style="margin-top: 3px; padding-left:6px; padding-right: 16px;">
                                             <label for="labelInput" class="form-label">Bank/Establishment<code>*</code></label>
                                             <input type="text" class="form-control" id="EmployeeId" />
@@ -372,12 +372,22 @@
                                 <fieldset style="margin-top:20px;" id="fieldsetCashAdvance">
                                     <legend style="background-color:#151529;" id="legendCashAdvance">2) Cash Advance</legend>
                                     <div class="row gy-4" style="margin-bottom: 15px; padding-left: 10px; padding-right: 10px;">
-                                        <div class="col-xxl-6 col-md-6">
+                                        <div class="col-xxl-3 col-md-3">
+                                            <label for="labelInput" class="form-label">Cash Advance<code>*</code></label>
+                                            <input type="text" class="form-control" id="EmployeeId" />
+                                        </div>
+
+                                        <div class="col-xxl-3 col-md-3" style="margin-top:55px;">
                                             <label class="form-control"><input type="checkbox" />Initial - New Employee</label>
                                         </div>
-                                        <div class="col-xxl-6 col-md-6">
-                                            <label class="form-control"><input type="checkbox" />Against</label>
+                                        <div class="col-xxl-3 col-md-3" style="margin-top:55px;">
+                                            <label class="form-control"><input type="checkbox" id="toggleButton" />Against</label>
                                         </div>
+                                        <div class="col-xxl-3 col-md-3" style="margin-top:30px;display:none;" id="myDiv">
+                                            <label for="labelInput" class="form-label"><code></code></label>
+                                            <input type="text" class="form-control" id="EmployeeId" />
+                                        </div>
+
                                         <div class="col-xxl-6 col-md-6" style="margin-top:3px;">
                                             <label for="labelInput" class="form-label">Reason<code>*</code></label>
                                             <textarea class="form-control" id="EmployeeId"></textarea>
@@ -432,8 +442,10 @@
                 <br />
                 <div class="col-xxl-12 col-md-12">
                     <div class="form-floating" style="float: right; padding-right: 2%;">
-                        <input type="button" value="Save" id="btnsave" class="btn btn-primary" />
-                        <a href="/HRMS_Employee/Employee" class="btn btn-danger">Reset</a>
+                        @*<input type="button" value="Save" id="btnsavess" class="btn btn-primary" />*@
+                        <button id="btnsave" class="btn btn-primary">Save</button>
+                        <a href="/HR_GeneralRequest/GeneralRequest" class="btn btn-danger">Reset</a>
+
                     </div>
                 </div>
                 <br />
@@ -444,26 +456,152 @@
     <!-- Modal -->
 }
 
-@section scripts{
-    <!--select2 cdn-->
+@*@section scripts{
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="~/assets/js/pages/select2.init.js"></script>
     <script src="~/assets/libs/prismjs/prism.js"></script>
     <script src="~/assets/js/app.js"></script>
-    <!-- prismjs plugin -->
-    <!-- App js -->
 }
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-@*<link rel="stylesheet" href="/resources/demos/style.css">*@
+<link rel="stylesheet" href="/resources/demos/style.css">*@
+
+
+
+
+@section scripts{
+ prismjs plugin 
+<script src="~/assets/libs/prismjs/prism.js"></script>
+ App js 
+<script src="~/assets/js/app.js"></script>
+}
+
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
+
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="~/MyApp/AddONS.js"></script>
+
+
+<script src="~/MyApp/HR_GeneralRequest.js"></script>
 
 <script>
     $(document).ready(function () {
 
+    })
+</script>
+
+<script>
+    $(document).ready(function () {
+        /*   alert('hiiiiiiii');*/
+        // Toggle visibility on button click
+        $("#toggleButton").click(function () {
+            $("#myDiv").toggle(); // Toggle visibility
+            // Update button text based on visibility
+            if ($("#myDiv").is(":visible")) {
+                $(this).text("Hide");
+            } else {
+                $(this).text("Show");
+            }
+        });
+    });
+</script>
+
+<script>
+    var options = $.extend({},
+        $.datepicker.regional["es"], {
+        dateFormat: "dd/mm/yy",
+        changeMonth: true,
+        changeYear: true,
+        todayHighlight: true,
+    });
+    $("#Date").datepicker(options);
+
+
+
+    $("#btnsave").click(function () {
+        debugger;
+
+        var _EmployeeId = $("#EmployeeId").val();
+        var _Certificate = $("#Certificate").val();
+
+        var divLength = $("#examplediv checkbox").length;
+        var ProductListArr = [];
+
+        if (_EmployeeId != "" && divLength > 2) {
+
+            if (tableLength > 2) {
+
+                for (var i = 0; i < divLength; i++) {
+
+                    var ProductList = {
+                        EmployeeId: _EmployeeId,
+                        _Certificate: _Certificate,
+
+                        Certificate: $("#examplediv checkbox tr:eq(" + i + ")").find('#Certificate').html(),
+                        //ToDate: $("#example tBody tr:eq(" + i + ")").find('td:eq(1)').html(),
+                        //Target: $("#example tBody tr:eq(" + i + ")").find('td:eq(2)').html(),
+                    };
+                    ProductListArr.push(ProductList);
+                }
+                $.ajax({
+                    type: 'POST',
+                    url: '/HR_GeneralRequest/SaveGeneralRequest',
+                    data: JSON.stringify(ProductListArr),
+                    contentType: "application/json; charset=utf-8",
+                    dataType: 'json',
+                    success: function (data) {
+                        if (data.Result == "yes") {
+                            swal({
+                                title: "success",
+                                text: "Record Successfully Saved.",
+                                type: "success",
+                            }).then(function (isConfirm) {
+                                if (isConfirm) {
+                                    window.location.reload();
+                                } else {
+
+                                }
+                            });
+                        }
+                        else if (data == "yes1") {
+                            swal({
+                                title: "success",
+                                text: "Record Successfully Updated.",
+                                type: "success",
+                            }).then(function (isConfirm) {
+                                if (isConfirm) {
+                                    window.location.reload();
+                                } else {
+
+                                }
+                            });
+                        }
+                        else {
+                            swal("Warning", "Record not save!", "warning");
+                        }
+                    },
+                    error: function (httpResponse) {
+                        swal("Warning", "Something Went to Wrong!", "warning");
+                    }
+                })
+            }
+        }
+        else {
+
+            if (_EmployeeId == "") {
+                swal("Warning", "Please Enter Employee Name !", "warning")
+                return false;
+            }
+            //if (tableLength == 2) {
+            //    swal("Warning", "Please At least 1 row data required.", "warning");
+            //    return false;
+            //}
+        }
     })
 </script>
