--- a/MassAutoGarage/Views/HRMS_OverTime/OverTime.cshtml
+++ b/MassAutoGarage/Views/HRMS_OverTime/OverTime.cshtml
@@ -165,7 +165,7 @@
                             <div class="col-xxl-6 col-md-6">
                                 <div>
                                     <label for="basiInput" class="form-label">Voucher No. <code>*</code></label>
-                                    @Html.TextBoxFor(m => m.VoucherNo, new { @class = "form-control", tabindex = 1, @readonly = "@readonly" })
+                                    @Html.TextBoxFor(m => m.VoucherNo, new { @class = "form-control", tabindex = 1, @readonly = "readonly" })
                                 </div>
                             </div>
                             <div class="col-xxl-12 col-md-12">
