--- a/MassAutoGarage/Views/HR_GeneralRequest/GeneralRequestList.cshtml
+++ b/MassAutoGarage/Views/HR_GeneralRequest/GeneralRequestList.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MassAutoGarage.Models.HRMS_EmployeeDocuments.HRMSEmployeeDocumentsModel>
+﻿@model List<MassAutoGarage.Models.HR_GeneralRequest.HR_GeneralRequestModel>
 
 @{
     ViewBag.Title = "General Request List";
@@ -91,58 +91,106 @@
                         <thead>
                             <tr>
                                 <th style=" width: 1%;">S.N.</th>
-                                <th>Name</th>
+                                <th>Voucher No.</th>
+                                <th>Emp Name</th>
                                 <th>Date</th>
                                 <th>Designation</th>
-                                <th>Branch</th>
-                                <th>Department</th>
+                                <th>Branch Name</th>
+                                <th>Department Name</th>
                                 <th>EmpId</th>
+                                <th>Salary Certificate</th>
+                                <th>Salary Transfer Letter</th>
+                                <th>NOC</th>
+                                <th>Experience Certificate</th>
+                                <th>Bank/Establishment</th>
+                                <th>AcctNo/IBANNo</th>
+                                <th>Opne New Bank Acct</th>
+                                <th>Transfer Loan To Other Bank</th>
+                                <th>Personal Loan</th>
+                                <th>NOC To Embassy</th>
+                                <th>Confirmation Lettr To Bank</th>
+                                <th>Loan TopUp</th>
+                                <th>Others</th>
+                                <th>Cash Advance</th>
+                                <th>Initial NewEmp</th>
+                                <th>Against</th>
+                                <th>Behalf Of Against</th>
+                                <th>Reason</th>
+                                <th>Monthly Deduction</th>
+                                <th>Salary Slips 3 Months</th>
+                                <th>Salary Slips 6 Months</th>
+                                <th>Traffic Fine Deduction Amt</th>
+                                <th>Salary Card</th>
+                                @*<th>Employee Signature</th>*@
+                                <th>Mobile Number</th>
                                 <th style="width:20%;">Action</th>
                             </tr>
                         </thead>
                         <tbody id="tBodyId">
 
-                            @*@foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td data-th="Srl.No.">@i</td>
-                                        <td data-th="Srl.No.">@item.BranchName</td>
-                                        <td data-th="Code">@item.EmployeeName</td>
-                                        <td data-th="Color Code">
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td data-th="Srl.No.">@i</td>
+                                    <td data-th="Code">@item.VoucherNumber</td>
+                                    <td data-th="Code">@item.EmployeeName</td>
+                                    <td data-th="Code">@item.Date</td>
+                                    <td data-th="Code">@item.Designation</td>
+                                    <td data-th="Code">@item.BranchName</td>
+                                    <td data-th="Code">@item.DepartmentName</td>
+                                    <td data-th="Code">@item.EmpId</td>
+                                    <td data-th="Code">@item.SalaryCertificate</td>
+                                    <td data-th="Code">@item.SalaryTransferLetter</td>
+                                    <td data-th="Code">@item.NOC</td>
+                                    <td data-th="Code">@item.ExperienceCertificate</td>
+                                    <td data-th="Code">@item.BankEstablishment</td>
+                                    <td data-th="Code">@item.AcctNoIBANNo</td>
+                                    <td data-th="Code">@item.OpneNewBankAcct</td>
+                                    <td data-th="Code">@item.TransferLoanToOtherBank</td>
+                                    <td data-th="Code">@item.PersonalLoan</td>
+                                    <td data-th="Code">@item.NOCToEmbassy</td>
+                                    <td data-th="Code">@item.ConfirmationLettrToBank</td>
+                                    <td data-th="Code">@item.LoanTopUp</td>
+                                    <td data-th="Code">@item.Others</td>
+                                    <td data-th="Code">@item.CashAdvance</td>
+                                    <td data-th="Code">@item.InitialNewEmp</td>
+                                    <td data-th="Code">@item.Against</td>
+                                    <td data-th="Code">@item.BehalfAgainst</td>
+                                    <td data-th="Code">@item.Reason</td>
+                                    <td data-th="Code">@item.MonthlyDeduction</td>
+                                    <td data-th="Code">@item.SalarySlips3Months</td>
+                                    <td data-th="Code">@item.SalarySlips6Months</td>
+                                    <td data-th="Code">@item.TrafficFineDeductionAmt</td>
+                                    <td data-th="Code">@item.SalaryCard</td>
+                                    @*<td data-th="Code">@item.EmpSignature</td>*@
+
+                                    @*<td data-th="Color Code">
+                                        <a href="@item.EmpSignature" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
+                                    </td>*@
+                                    <td data-th="Code">@item.MobileNumber</td>
+
+
+                                    @*<td data-th="Color Code">
                                             <a href="@item.files" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.EmirateFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.PassportFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.VisaFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.InsuranceFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.EmpCardFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
+                                        </td>*@
 
-                                        <td data-th="Action">
 
-                                            <div class="d-flex gap-2">
-                                                <div class="edit">
+                                    <td data-th="Action">
 
-                                                    <a href="/HRMS_EmployeeDocuments/EmployeeDocuments?Id=@item.EmpDocId" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
-                                                </div>
-                                                <div class="remove">
-                                                    <a href="javascript:void(0)" onclick="return DeleteEmployeeDocuments('@item.EmpDocId')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
+                                        <div class="d-flex gap-2">
+                                            <div class="edit">
 
-                                                </div>
+                                                <a href="/HR_GeneralRequest/GeneralRequest?Id=@item.Idincrept" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
                                             </div>
-                                        </td>
-                                    </tr>
-                                    i++;
-                                }*@
+                                            <div class="remove">
+                                                <a href="javascript:void(0)" onclick="return DeleteGeneralRequest('@item.Idincrept')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
+
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                i++;
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -167,6 +215,7 @@
     <!-- App js -->
     <script src="~/assets/js/app.js"></script>
 }
+<script src="~/MyApp/HR_GeneralRequest.js"></script>
 
 <script>
     $(document).ready(function () {
